# pathtracer

./: .gitignore  Cargo.toml  README.md  build.rs
renderer/: Cargo.toml  build.rs
renderer/src/: lib.rs  shader.frag.glsl
src/: bvh.rs  camera.rs  color.rs  distributions.rs  hosek_wilkie.rs  main.rs  material.rs  renderer.rs  rng.rs  scene.rs  shader.frag.glsl  shader.vert.glsl  shader.wgsl  triangle.rs
src/bvh/: README.md  aabb.rs  axis.rs  bounding_hierarchy.rs  bvh.rs  flat_bvh.rs  mod.rs  ray.rs  testbase.rs  utils.rs
src/bvh/bvh/: bvh_impl.rs  mod.rs  optimization.rs
src/data/: RGB-Components-CIE-1931-1nm.csv
