[package]
name = "pathtracer"
version = "0.1.0"
authors = ["Andreas Ots <qrpth@qrpth.eu>"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
approx = "0.5.0"
arrayvec = "0.7.1"
bytemuck = "1.3.1"
image = "0.23.8"
log = { version = "0.4.11", features = ["release_max_level_error", "max_level_trace"] }
nalgebra = "0.27.1"
num = "0.4.0"
obj = "0.10.1"
pollster = "0.2.0"
rand = "0.8.4"
rand_distr = "0.4.1"
rayon = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }
simple_logger = "1.6.0"
toml = "0.5.6"
wgpu = "0.8.1"
winit = "0.25.0"

[dev-dependencies]
proptest = "1.0.0"

[build-dependencies]
anyhow = "1.0.32"
csv = "1.1.3"
serde = "1.0.114"
shaderc = "0.7.2"
cc = "1.0.58"
bindgen = "0.58.1"

[profile.release]
debug = true
