[package]
name = "pathtracer"
version = "0.1.0"
authors = ["Andreas Ots <qrpth@qrpth.eu>"]
license = "Apache-2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
approx = "0.5.0"
arrayvec = "0.7.1"
bytemuck = "1.3.1"
image = "0.24.4"
log = { version = "0.4.11", features = ["release_max_level_error", "max_level_trace"] }
nalgebra = "0.31.1"
num = "0.4.0"
obj = "0.10.1"
pollster = "0.2.0"
rand = "0.8.4"
rand_distr = "0.4.1"
rayon = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }
simple_logger = "2.3.0"
toml = "0.5.6"
wgpu = "0.13.1"
winit = "0.27.3"

[build-dependencies]
anyhow = "1.0.32"
csv = "1.1.3"
serde = "1.0.114"

[profile.release]
debug = true
