[package]
name = "pathtracer"
version = "0.1.0"
authors = ["Andreas Ots <qrpth@qrpth.eu>"]
license = "Apache-2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
approx = "0.5.1"
arrayvec = "0.7.2"
bytemuck = "1.12.2"
image = "0.24.4"
log = { version = "0.4.17", features = ["release_max_level_error", "max_level_trace"] }
nalgebra = "0.31.3"
num = "0.4.0"
obj = "0.10.2"
pollster = "0.2.5"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
rayon = "1.5.3"
serde = { version = "1.0.147", features = ["derive"] }
simple_logger = "4.0.0"
toml = "0.5.9"
wgpu = "0.14.0"
winit = "0.27.5"

[build-dependencies]
anyhow = "1.0.66"
csv = "1.1.6"
serde = "1.0.147"

[profile.release]
debug = true
