[package]
name = "renderer"
version = "0.1.0"
authors = ["Andreas Ots <qrpth@qrpth.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
wgpu = "0.5.2"
winit = "0.22.2"
pollster = "0.2.0"
bytemuck = "1.3.0"

[build-dependencies]
anyhow = "1.0.32"
shaderc = "0.6.2"
